--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <img
+        class="trybewarts-header-logo"
+        src="images/trybewarts-header-logo.svg"
+        alt="Tyberwarts Logo"
+      />
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
