--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         src="images/trybewarts-header-logo.svg"
         alt="Tyberwarts Logo"
       />
+      <form class="trybewarts-login" id="trybewarts-login">
+        <input name="email" placeholder="Email" />
+        <input name="password" placeholder="Senha" type="password" />
+        <button>Entrar</button>
+      </form>
     </header>
     <script src="script.js"></script>
   </body>
