--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         src="images/trybewarts-header-logo.svg"
         alt="Tyberwarts Logo"
       />
+      <h1 id="trybewarts-header-title">Trybewarts</h1>
       <form class="trybewarts-login" id="trybewarts-login">
         <input name="email" placeholder="Email" />
         <input name="password" placeholder="Senha" type="password" />
