--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <button>Entrar</button>
       </form>
     </header>
+
+    <main>
+      <form id="evaluation-form"></form>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
