--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <main>
       <form id="evaluation-form"></form>
     </main>
+    <img src="images/trybewarts-colored.svg" alt="trybewarts-forms-logo" id="trybewarts-forms-logo">
     <script src="script.js"></script>
   </body>
 </html>
