--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
     </header>
 
     <main>
-      <form id="evaluation-form"></form>
+      <form id="evaluation-form">
+        <input type="text" placeholder="Nome" id="input-name">
+        <input type="text" placeholder="Sobrenome" id="input-lastname">
+        <input type="email" placeholder="Email" id="input-email">
+      </form>
+      <img src="images/trybewarts-colored.svg" alt="trybewarts-forms-logo" id="trybewarts-forms-logo">
     </main>
-    <img src="images/trybewarts-colored.svg" alt="trybewarts-forms-logo" id="trybewarts-forms-logo">
     <script src="script.js"></script>
   </body>
 </html>
