--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
 
     <main>
       <form id="evaluation-form">
-        <input type="text" placeholder="Nome" id="input-name">
-        <input type="text" placeholder="Sobrenome" id="input-lastname">
-        <input type="email" placeholder="Email" id="input-email">
-        <select name="house" id="house">
-         <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-         <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-         <option value="Corvinode" id="corvinode-house">Corvinode</option>
-         <option value="Pytherina" id="pytherina-house">Pytherina</option>
-        </select>
+        <div>
+          <input type="text" placeholder="Nome" id="input-name">
+          <input type="text" placeholder="Sobrenome" id="input-lastname">
+        </div>
+        <div>
+          <input type="email" placeholder="Email" id="input-email">
+          <select name="house" id="house">
+          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+          <option value="Corvinode" id="corvinode-house">Corvinode</option>
+          <option value="Pytherina" id="pytherina-house">Pytherina</option>
+          </select>
+        </div>
       </form>
       <img src="images/trybewarts-colored.svg" alt="trybewarts-forms-logo" id="trybewarts-forms-logo">
     </main>
