--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
           <option value="Pytherina" id="pytherina-house">Pytherina</option>
           </select>
         </div>
+        <label for="family" id = "label-family">Qual sua família?</label>
+        <div>
+          <input type="radio" name="family" value="Frontend">Frontend
+        </div>
+        <div>
+          <input type="radio" name="family" value="Backend">Backend
+        </div>
+        <div>
+          <input type="radio" name="family" value="FullStack">FullStack
+        </div>
       </form>
       <img src="images/trybewarts-colored.svg" alt="trybewarts-forms-logo" id="trybewarts-forms-logo">
     </main>
