--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
           <input type="checkbox" name="want-to-learn" value="Python" />
           Python
         </label>
+
+        <div>
+          <label id="label-rate">Como você avalia a Trybewarts?</label>
+          <label><input type="radio" name="rate" value="1" />1</label>
+          <label><input type="radio" name="rate" value="2" />2</label>
+          <label><input type="radio" name="rate" value="3" />3</label>
+          <label><input type="radio" name="rate" value="4" />4</label>
+          <label><input type="radio" name="rate" value="5" />5</label>
+          <label><input type="radio" name="rate" value="6" />6</label>
+          <label><input type="radio" name="rate" value="7" />7</label>
+          <label><input type="radio" name="rate" value="8" />8</label>
+          <label><input type="radio" name="rate" value="9" />9</label>
+          <label><input type="radio" name="rate" value="10" />10</label>
+        </div>
       </form>
       <img
         src="images/trybewarts-colored.svg"
