--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
           <label><input type="radio" name="rate" value="9" />9</label>
           <label><input type="radio" name="rate" value="10" />10</label>
         </div>
+
+        <label for="textarea">Deixe seu comentário</label>
+        <textarea id="textarea" maxlength="500"></textarea>
       </form>
       <img
         src="images/trybewarts-colored.svg"
