--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
           <label><input type="radio" name="rate" value="10" />10</label>
         </div>
 
-        <label for="textarea">Deixe seu comentário</label>
+        <label for="textarea" class="textarea">Deixe seu comentário:</label>
         <textarea id="textarea" maxlength="500"></textarea>
+
+        <label id="label-infos">
+          Você concorda com o uso das informações acima?
+          <input type="checkbox" name="agreement" id="agreement" />
+        </label>
       </form>
       <img
         src="images/trybewarts-colored.svg"
