--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
           Você concorda com o uso das informações acima?
           <input type="checkbox" name="agreement" id="agreement" />
         </label>
+
+        <button type="submit" id="submit-btn">Enviar</button>
       </form>
       <img
         src="images/trybewarts-colored.svg"
