--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <input type="checkbox" name="agreement" id="agreement" />
         </label>
 
-        <button type="submit" id="submit-btn">Enviar</button>
+        <button type="submit" id="submit-btn" disabled>Enviar</button>
       </form>
       <img
         src="images/trybewarts-colored.svg"
