--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
         id="trybewarts-forms-logo"
       />
     </main>
+    <footer>
+      <p>Direitos reservados à Trybewarts©</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
