--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
         </div>
 
         <label for="textarea" class="textarea">Deixe seu comentário:</label>
-        <textarea id="textarea" maxlength="500"></textarea>
+        
+        <div id="text">
+          <p id="counter">500</p>
+          <textarea id="textarea" maxlength="500"></textarea>
+        </div>
 
         <label id="label-infos">
           Você concorda com o uso das informações acima?
